<resources>
    <string name="app_name">App Reclamações da SPTrans !</string>
    <string name="hello_world">Vazio!</string>
    <string name="label_title">Título: </string>

    <string name="text_problem_intro">Adicionar Reclamação</string>

    <string name="add_problem">Adicionar Reclamação</string>
    <string name="phone_number">Celular...</string>
    <string name="name">Nome...</string>
    <string name="rg">RG...</string>
    <string name="cpf">CPF...</string>
    <string name="birth_date">Data de Nascimento...</string>
    <string name="hint_email">Email...</string>
    <string name="city">Cidade...</string>
    <string name="postal_code">CEP...</string>
    <string name="district">Bairro...</string>
    <string name="complement">Complemento...</string>
    <string name="house_number">Numero...</string>
    <string name="address">Endereço...</string>
    <string name="state">UF/Estado...</string>
    <string name="button_user_settings">Salvar</string>


    <string name="edit_title">Título ...</string>
    <string name="edit_description">Descrição ...</string>

    <string name="action_settings">Settings</string>

    <string name="button_send">Enviar</string>
    <string name="button_images">Galeria</string>
    <string name="button_camera">Camera</string>

    <string name="title_activity_main">Painel de Controle</string>
    <string name="title_activity_add_content">Adicionar Reclamação</string>
    <string name="title_activity_display_message">Seu conteudo:</string>

    <string name="label_address">Endereço: </string>
    <string name="label_description">Descrição: </string>
    <string name="label_status">Status: </string>
    <string name="label_in_date">Data do Envio: </string>
    <string name="label_update_date">Atualizado em: </string>
    <string name="label_response">Resposta: </string>
    <string name="label_latlon">Coordenadas: </string>


    <string name="desc_image_problem">Esta é a imagem da Reclamação</string>
    <string name="content_list_message">Minhas reclamações</string>


    <!-- errors -->

    <string name="gps_false">O GPS é falso porque o endereço esta errado!</string>
    <string name="title_activity_single_content">Reclamação selecionada:</string>

    <string name="action_reload">Recarregar</string>
    <string name="dont_have_gps"> Você não possui GPS!</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_login">Iniciar sessão</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Iniciar sessão ou registrar</string>
    <string name="action_sign_in_short">Iniciar sessão</string>
    <string name="error_invalid_email">O email é inválido</string>
    <string name="error_invalid_password">Esta senha é muito pequena</string>
    <string name="error_incorrect_password">A senha esta incorreta</string>
    <string name="error_field_required">Este campo é necessário</string>
    <string name="permission_rationale">"É necessário permitir acesso aos contatos para auto completar email."
    </string>
    <string name="title_activity_user_settings">Minhas Configurações</string>


</resources>
