<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="org.blackbird.stayalert.ContentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/title"
            android:textSize="10pt" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_camera"
            android:paddingLeft="22dp"
            android:drawablePadding="9dp"
            android:onClick="loadCamera" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_send"
            android:onClick="sendMessage"
            android:text="@string/button_send" />

    </LinearLayout>
    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/edit_title" />
    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:hint="@string/edit_description"
        android:lines="7" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_address"/>

        <TextView
            android:id="@+id/edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:contentDescription="@string/desc_image_problem"/>

        <!--android:src="@drawable/ic_camera" TODO placehouder of imageview-->

    </LinearLayout>

</LinearLayout>
