<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="org.blackbird.smartgeo.ProblemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_intro"
            android:textSize="10pt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_send"
            android:onClick="sendMessage"
            android:text="@string/button_send" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/edit_title" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:hint="@string/edit_description"
        android:lines="7" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_address"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add_image"
            android:drawablePadding="10dp"
            android:onClick="addImage"
            android:text="@string/button_images" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_camera"
            android:drawablePadding="10dp"
            android:onClick="loadCamera"
            android:text="@string/button_camera_b"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/picture_one"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:contentDescription="@string/desc_image_problem"/>

        <ImageView
            android:id="@+id/picture_two"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:contentDescription="@string/desc_image_problem"/>

        <ImageView
            android:id="@+id/picture_three"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:contentDescription="@string/desc_image_problem"/>

        <!--android:src="@drawable/ic_camera" TODO placehouder of imageview-->

    </LinearLayout>

</LinearLayout>
